# omni-steer

./: .gitignore  README.md  pyproject.toml
scripts/: exp_meld_baselines.py  run_probe.py  steer_demo.py
src/: dataloaders.py  hooks.py  trainers.py  ui.py  utils.py
src/qwen_omni_rep_eng/: constants.py  ui.py
src/qwen_omni_rep_eng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qwen_omni_rep_eng/analysis/: patching.py  probing.py  sae.py
src/qwen_omni_rep_eng/data/: meld.py
src/qwen_omni_rep_eng/metrics/: audio.py  plotting.py  text.py
src/qwen_omni_rep_eng/models/: omni.py
src/qwen_omni_rep_eng/steering/: talker.py  thinker.py
tests/: test_imports.py
